1.4.1
-------

- Replaced sphinx with manticore 5.0.2, see https://www.mailpiler.org/wiki/current:manticore
- Replaced obsoleted libchart library with chart.js
- Added real-time index support



1.3.12:
-------

- Introduced new piler.conf variable: tls_min_version

  It sets the minimum TLS protocol version the piler-smtp daemon supports.

  Possible values:
  - TLSv1   (not recommended)
  - TLSv1.1 (not recommended)
  - TLSv1.2 (default)
  - TLSv1.3

- Introduced the archive_address feature, see etc/example.conf for the details
- Introduced the raw: search label
- Added Italian translation. Credits: Stefano Gatto
- timestamp signing sorts by 'id' column
- timestamp hash value defaults to sha256
- Minor fixes
- Added support for php 8.1
- Fixed handling long email addresses

Be sure to apply util/db-upgrade.sql


1.3.11:
-------

- [BUGFIX] Refactored the smtp timeout check
- Obsoleted the LDAP port parameter. Specify the ldap host in the form
  of protocol://hostname:port, eg. ldaps://ldap.yourdomain.com:636

1.3.10:
-------

- Added security header feature
- Introduced the smtp acl list, and obsoleted the tcp_wrappers check
- Switched from Blowfish encryption to AES-256

1.3.9:
------

- Added a separator to searching for attachment names
- [BUGFIX] Render multiple mail parts in mail view instead of only the last part
- Use TLS v1.2 with openssl 1.0.x for connecting remote pop3/imap servers
- Instant search results to the gui when the search page loads
- Support sphinx-3.3.1, introduced sphinx strict mode variable
- GUI domain fixes
- gcc 9 fixes
- Fix permission on sphinx data dir to 700
- pilerpurge.py should honor the mysqlhost value
- Password change enabled by default
- Health page fixes
- GUI mime parser fixes
- Start/stop script fix
- Optimized search page for mobile devices, set $config['ENABLE_MOBILE_PREVIEW'] = 1; in config-site.php to enable it


1.3.0:
-----

- Switched from utf8 to utf8mb4 encoding.

- Switched from preforking model to epoll
